// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile s huge 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 0;
  line-height: 20;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 10px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<View
  className="IS5"
>
  <View
    className="IS2"
  >
    <Text
      className="IS1"
    >
      Nature notes
    </Text>
  </View>
  <Text
    className="IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </Text>
  <Text
    className="IS4"
  >
    <span>
      Libby Purves
    </span>
  </Text>
</View>
`;

exports[`tile s medium 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 5px;
  line-height: 20;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 5px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<View
  className="IS5"
>
  <View
    className="IS2"
  >
    <Text
      className="IS1"
    >
      Nature notes
    </Text>
  </View>
  <Text
    className="IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </Text>
  <Text
    className="IS4"
  >
    <span>
      Libby Purves
    </span>
  </Text>
</View>
`;

exports[`tile s no byline 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 22;
  margin-bottom: 5px;
}

.IS2 {
  align-items: center;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
}

.IS4 {
  padding-bottom: 10px;
}
</style>

<View
  className="IS4"
>
  <View
    className="IS2"
  >
    <Text
      className="IS1"
    >
      Nature notes
    </Text>
  </View>
  <Text
    className="IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </Text>
</View>
`;

exports[`tile s small 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 22;
  margin-bottom: 5px;
}

.IS2 {
  align-items: center;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding-bottom: 10px;
}
</style>

<View
  className="IS5"
>
  <View
    className="IS2"
  >
    <Text
      className="IS1"
    >
      Nature notes
    </Text>
  </View>
  <Text
    className="IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </Text>
  <Text
    className="IS4"
  >
    <span>
      Libby Purves
    </span>
  </Text>
</View>
`;

exports[`tile s wide 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 0;
  line-height: 20;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 10px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<View
  className="IS5"
>
  <View
    className="IS2"
  >
    <Text
      className="IS1"
    >
      Nature notes
    </Text>
  </View>
  <Text
    className="IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </Text>
  <Text
    className="IS4"
  >
    <span>
      Libby Purves
    </span>
  </Text>
</View>
`;

exports[`tile s with logo for medium breakpoint 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 0;
  line-height: 20;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 5px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<View
  className="IS5"
>
  <View
    className="IS2"
  >
    LOGO
    <Text
      className="IS1"
    >
      Nature notes
    </Text>
  </View>
  <Text
    className="IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </Text>
  <Text
    className="IS4"
  >
    <span>
      Libby Purves
    </span>
  </Text>
</View>
`;
